# Clutterhs

./: .gitignore  ClutterGame.hs  INSTALL  Main.hs  Makefile  PathTest.hs  README  build.sh  buildall.sh  clutter.cabal  hsclutter.hs
Graphics/UI/: Clutter.hs
Graphics/UI/Clutter/: Actor.chs  Alpha.chs  Animatable.chs  AnimateArgs.chs  Animation.chs  Behaviour.chs  BehaviourDepth.chs  BehaviourEllipse.chs  BehaviourOpacity.chs  BehaviourPath.chs  BehaviourRotate.chs  BehaviourScale.chs  BindingPool.chs  CairoTexture.chs  ChildMeta.chs  Clone.chs  Color.chi  Color.chs  Color.hs  Container.chs  CustomSignals.chs  Event.chs  External.chs  GValue.chs  General.chs  Group.chs  Gtk.hs  Interval.chs  ListModel.chs  Media.chs  Model.chs  ModelIter.chs  Path.chs  Rectangle.chs  Score.chs  Script.chs  Scriptable.chs  Shader.chs  Signals.chs  Stage.chs  (+10 more)
Graphics/UI/Clutter/Gtk/: Embed.chs  Types.chs
callbackGen/: Signals.chs.template  cluttermarshal.list
clutter/: AUTHORS  C2HS.hs  INSTALL  README  build.sh  clutter.cabal  clutterhs.cabal
clutter-gst/: clutter-gst.cabal
clutter-gst/Graphics/UI/Clutter/: Gst.hs
clutter-gst/Graphics/UI/Clutter/Gst/: Types.chs  Utilities.chs  VideoSink.chs  VideoTexture.chs
clutter-gtk/: build.sh  clutter-gtk.cabal
clutter-gtk/Graphics/UI/Clutter/: Gtk.hs
clutter-gtk/Graphics/UI/Clutter/Gtk/: Embed.chs  Scrollable.chs  Types.chs  Utility.chs  Viewport.chs  Zoomable.chs
clutter/Graphics/UI/: Clutter.chs  Clutter.hs
clutter/Graphics/UI/Clutter/: Actor.chs  Alpha.chs  AnimOp.chs  Animatable.chs  Animation.chs  Behaviour.chs  BehaviourDepth.chs  BehaviourEllipse.chs  BehaviourOpacity.chs  BehaviourPath.chs  BehaviourRotate.chs  BehaviourScale.chs  BinLayout.chs  BindingPool.chs  Box.chs  BoxLayout.chs  CairoTexture.chs  ChildMeta.chs  Clone.chs  Color.chs  Container.chs  CustomSignals.chs  Enums.chs  Event.chs  FixedLayout.chs  FlowLayout.chs  GTypes.chs  GValue.chs  General.chs  Group.chs  Interval.chs  KeySyms.hs  LayoutManager.chs  ListModel.chs  Media.chs  Model.chs  ModelIter.chs  Path.chs  Rectangle.chs  Score.chs  (+15 more)
clutter/csrc/: clutter-macros.c  clutter-macros.h  hsclutterthread.c  hsclutterthread.h  hsgvalue.c  hsgvalue.h
clutter/demo/: Arst.hs  BehaviourEllipseTest.hs  BindingPoolTest.hs  Bingo.hs  CairoTest.hs  ClutterGame.hs  Containers.hs  GValueTest.hs  GroupTest.hs  IntervalTest.hs  ModelTest.hs  PathTest.hs  RectangleTest.hs  SpinningBobDylanShaderGame.hs  TextTest.hs  TextureTest.hs  TimelineTest.hs  Translation.hs  Transparent.hs  UnitTest.hs  bingoinput.txt  build-demos.sh  default.glsl
cogl/: cogl.cabal
cogl/Graphics/: Cogl.hs
cogl/Graphics/Cogl/: Color.chs  Enums.chs  General.chs  Materials.chs  Matrices.chs  Offscreen.chs  OffscreenBuffers.chs  Primitives.chs  ShadersPipeline.chs  Textures.chs  Types.chs  VertexBuffers.chs
cogl/csrc/: cogl_workarounds.c  cogl_workarounds.h
demo/: BehaviourEllipseTest.hs  ClutterGame.hs  Main.hs  PathTest.hs  RectangleTest.hs  ScoreTest.hs  TextTest.hs  TextureTest.hs  TimelineTest.hs
tools/: ClutterKeySymsGen.hs
tools/callbackGen/: Signals.chs.template  cluttermarshal.list
