name: clutter
version: 0.0.1
license: LGPL
--license-file: COPYING.LIB
maintainer: arsenm2@rpi.edu
stability: lol
homepage: http://example.com
category: Graphics
Synopsis: Clutter bindings
Description: Clutter bindings
build-depends: base, glib
Build-Type:      Simple

Cabal-Version: >= 1.2

Flag Debug
  Description: Enable debug support
  Default:     True

Library
  Build-Depends: base, glib, gtk
  pkgconfig-depends: gtk+-2.0, glib-2.0, gobject-2.0, clutter-1.0
  Build-Tools: c2hs
  Includes: clutter/clutter.h
  Extensions: CPP, FlexibleInstances, ForeignFunctionInterface, TypeSynonymInstances
  Exposed-modules: Graphics.UI.Clutter.Color,
                   Graphics.UI.Clutter.Types,
                   Graphics.UI.Clutter
  Exposed: True
--  GHC-options: -Wall -O2
  Hs-Source-Dirs:  .
  Include-dirs: /usr/include/clutter-1.0/,
                /usr/include/glib-2.0,
                /usr/include/glib-2.0/glib,
                /usr/lib/glib-2.0/include,
                /usr/include/pango-1.0/,
                /usr/include/cairo
  if flag(debug)
    CC-Options: "-DDEBUG"
    CPP-Options: -DDEBUG


Executable arst
  Main-Is:         Main.hs
  pkgconfig-depends: gtk+-2.0, glib-2.0, gobject-2.0, clutter-1.0
  Hs-Source-Dirs:  .,
                   Graphics,
                   Graphics/UI,
                   Graphics/UI/Clutter
  Other-Modules:   Graphics.UI.Clutter
  Build-Depends: base, glib


