name: clutter
version: 0.0.1
license: LGPL
license-file: COPYING
maintainer: arsenm2@rpi.edu
stability: lol
homepage: http://example.com
category: Graphics
Synopsis: Clutter bindings
Description: Clutter bindings
build-depends: base, glib
Build-Type: Simple

Cabal-Version: >= 1.2

Flag Debug
  Description: Enable debug support
  Default:     True

Library
  Build-Depends: base, glib, gtk, haskell98, mtl
  pkgconfig-depends: gtk+-2.0, glib-2.0, gobject-2.0, clutter-1.0
  Build-Tools: c2hs
  Includes: clutter/clutter.h
  Extensions: CPP, FlexibleInstances, ForeignFunctionInterface, TypeSynonymInstances
--I'm not sure that GValue or AnimateArgs should be exposed
  Exposed-modules: Graphics.UI.Clutter.Types,
                   Graphics.UI.Clutter.GValue,
                   Graphics.UI.Clutter.Signals,
                   Graphics.UI.Clutter.General,
                   Graphics.UI.Clutter.Color,
                   Graphics.UI.Clutter.Actor,
                   Graphics.UI.Clutter.Rectangle,
                   Graphics.UI.Clutter.Container,
                   Graphics.UI.Clutter.Group,
                   Graphics.UI.Clutter.Event,
                   Graphics.UI.Clutter.Text,
                   Graphics.UI.Clutter.Stage,
                   Graphics.UI.Clutter.Animation,
                   Graphics.UI.Clutter.AnimateArgs,
                   Graphics.UI.Clutter.Timeline,
                   Graphics.UI.Clutter.CairoTexture,
                   Graphics.UI.Clutter.Alpha,
                   Graphics.UI.Clutter

  Exposed: True
--  GHC-options: -Wall
  Hs-Source-Dirs:  .,
                   ./Graphics,
                   ./Graphics/UI,
                   ./Graphics/UI/Clutter
  Include-dirs: /usr/include/clutter-1.0/,
                /usr/include/glib-2.0,
                /usr/include/glib-2.0/glib,
                /usr/lib/glib-2.0/include,
                /usr/include/pango-1.0/,
                /usr/include/cairo
  if flag(debug)
    CC-Options: "-DDEBUG -O0 -g"
    CPP-Options: -DDEBUG


Executable arst
  Main-Is:         Main.hs
  Other-Modules:   Graphics.UI.Clutter
  pkgconfig-depends: gtk+-2.0, glib-2.0, gobject-2.0, clutter-1.0
  Hs-Source-Dirs:  .,
                   Graphics,
                   Graphics/UI,
                   Graphics/UI/Clutter,
                   dist/build

  Build-Depends: base, glib


Executable cluttergame
  Main-Is:         ClutterGame.hs
  Other-Modules:   Graphics.UI.Clutter
  pkgconfig-depends: gtk+-2.0, glib-2.0, gobject-2.0, clutter-1.0
  Hs-Source-Dirs:  .,
                   Graphics,
                   Graphics/UI,
                   Graphics/UI/Clutter,
                   dist/build

  Build-Depends: base, glib


