name: clutter-gst
version: 0.2
license: LGPL
license-file: COPYING
maintainer: arsenm2@rpi.edu
author: Matthew Arsenault
stability: alpha
copyright: (c) 2010 Matthew Arsenault
homepage: http://example.com
category: Graphics
Synopsis: Clutter-Gst bindings
Description: Clutter-Gst bindings
build-depends: base, glib, array, clutterhs
Build-Type: Simple

Cabal-Version: >= 1.2

Flag Debug
  Description: Enable debug support
  Default:     True

Library
  pkgconfig-depends: gtk+-2.0, glib-2.0, gobject-2.0, clutter-1.0, clutter-gtk-0.10, gstreamer-base-0.10
  Build-Tools: c2hs
  Includes: clutter/clutter.h,
            clutter-gtk/clutter-gtk.h
  Extensions: CPP, ForeignFunctionInterface, ScopedTypeVariables
  Build-Depends: base, glib, gtk, haskell98, mtl, array, clutterhs, gstreamer
  Other-modules:   C2HS
  Exposed-modules: Graphics.UI.Clutter.Gst,
                   Graphics.UI.Clutter.Gst.Types,
                   Graphics.UI.Clutter.Gst.VideoSink,
                   Graphics.UI.Clutter.Gst.Utilities,
                   Graphics.UI.Clutter.Gst.VideoTexture
  Exposed: True
  GHC-options: -W
  Hs-Source-Dirs:  .
  if flag(debug)
    CC-Options: "-DDEBUG -O0 -g"
    CPP-Options: -DDEBUG

