name: clutterhs
version: 0.0.1
license: LGPL
license-file: COPYING
stability: alpha
author: Matthew Arsenault
copyright: (c) 2009 Matthew Arsenault
maintainer: arsenm2@rpi.edu
homepage: http://example.com
category: Graphics
Description: Bindings to the Clutter animation library
build-depends: base, glib, array, gtk
Build-Type: Simple
tested-with: GHC == 6.10.4

Cabal-Version: >= 1.2

Flag Debug
  Description: Enable debug support
  Default:     True

--Flag X11Support
--  Description: Enable X11 support
--  Default:     True

Library
  pkgconfig-depends: glib-2.0, gobject-2.0, clutter-1.0, pango
  Build-Tools: c2hs
  Includes: csrc/clutter-macros.h
  Extensions: ForeignFunctionInterface,
              ExistentialQuantification,
              TypeSynonymInstances,
              CPP,
              FunctionalDependencies,
              MultiParamTypeClasses,
              OverlappingInstances,
              ScopedTypeVariables,
              EmptyDataDecls,
              UndecidableInstances,
              FlexibleInstances

  Build-Depends: base, glib, haskell98, mtl, cairo, X11, array, gtk
  Other-modules: C2HS
--Utility and Types should not be exposed, but build fails if put in Other-modules field
--X11 and gtk should also be optional
  Exposed-modules: Graphics.UI.Clutter.Types,
                   Graphics.UI.Clutter.Signals,
                   Graphics.UI.Clutter.Utility,
                   Graphics.UI.Clutter.GTypes,
                   Graphics.UI.Clutter.Event,
                   Graphics.UI.Clutter.StoreValue,
                   Graphics.UI.Clutter.Animation,
                   Graphics.UI.Clutter.CustomSignals,
                   Graphics.UI.Clutter.General,
                   Graphics.UI.Clutter.Color,
                   Graphics.UI.Clutter.Actor,
                   Graphics.UI.Clutter.Rectangle,
                   Graphics.UI.Clutter.Texture,
                   Graphics.UI.Clutter.Container,
                   Graphics.UI.Clutter.Group,
                   Graphics.UI.Clutter.Text,
                   Graphics.UI.Clutter.Stage,
                   Graphics.UI.Clutter.Animatable,
                   Graphics.UI.Clutter.Timeline,
                   Graphics.UI.Clutter.Score,
                   Graphics.UI.Clutter.CairoTexture,
                   Graphics.UI.Clutter.Alpha,
                   Graphics.UI.Clutter.Media,
                   Graphics.UI.Clutter.ChildMeta,
                   Graphics.UI.Clutter.Clone,
                   Graphics.UI.Clutter.Behaviour,
                   Graphics.UI.Clutter.BehaviourScale,
                   Graphics.UI.Clutter.BehaviourDepth,
                   Graphics.UI.Clutter.BehaviourEllipse,
                   Graphics.UI.Clutter.BehaviourOpacity,
                   Graphics.UI.Clutter.BehaviourRotate,
                   Graphics.UI.Clutter.BehaviourPath,
                   Graphics.UI.Clutter.Interval,
                   Graphics.UI.Clutter.Path,
                   Graphics.UI.Clutter.Shader,
                   Graphics.UI.Clutter.Model,
                   Graphics.UI.Clutter.ListModel,
                   Graphics.UI.Clutter.ModelIter,
                   Graphics.UI.Clutter.Script,
                   Graphics.UI.Clutter.Units,
                   Graphics.UI.Clutter.Scriptable,
                   Graphics.UI.Clutter.BindingPool,
                   Graphics.UI.Clutter.Utilities,
                   Graphics.UI.Clutter.X11,
                   Graphics.UI.Clutter
  Exposed: True
  C-Sources: ./csrc/clutter-macros.c
  Hs-Source-Dirs: .
  Include-dirs: ./csrc
  if flag(debug)
    GHC-options: -W
    CC-Options: "-DDEBUG -O0 -g"
    CPP-Options: -DDEBUG
  else
    GHC-options: -O
    CC-Options: "-O3"

